# shamichan

./: .clang-format  .dockerignore  .flowconfig  .gitignore  .gitmodules  .npmignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  COC.md  CODE_OF_CONDUCT.md  Cargo.toml  DEPLOY.sh  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  README.md  TODO  Vagrantfile  audio.c  audio.go  audio.h  audio_test.go  authcommon.js  benchmark.js  binding.gyp  builder.c  builder.js  cache.test  client.js  common.go  common.js  config.go  config.js  config.js.example  db.db  db.js  db.old.js  (+52 more)
client/: .gitignore  Cargo.toml  Makefile  admin.js  amusement.js  background.js  background.ts  banner.js  banner.ts  captcha.ts  catalog.js  client.js  client.ts  collection.js  collection.ts  common.js  common.ts  conn.js  connection.js  connection.ts  db.ts  defer.js  defer.ts  drop.js  embed.js  etc.js  etc.ts  extract.js  fetch.ts  forms.ts  fsm.js  fsm.ts  gravitas.js  hide.js  history.js  history.ts  hooks.ts  hover.js  hover.ts  imager.js  (+50 more)
client/base/: banner.ts  view.ts
client/client/: background.js  banner.js  connection.ts  defer.js  main.js  main.ts  modal.js  scroll.js  send.js  util.js  view.js
client/common/: db.ts  imports.js  index.ts  ipc.ts  oneesama.js  types.ts  util.js
client/connection/: index.ts  messages.ts  state.ts  synchronization.ts  ui.ts
client/desktop/: notify.js
client/frontend/: lang.ts  main.ts  state.ts
client/lang/: en_GB.js
client/main/: connection.js  etc.js  extract.js  fsm.js  hide.js  history.js  main.js  memory.js  modal.js  scroll.js  state.js  time.js  util.js
client/mod/: admin.ts  changePassword.ts  common.ts  configureBoard.ts  configureServer.ts  createBoard.ts  deleteBoard.ts  forms.ts  index.js  index.ts  input.js  log.js  login.ts  panel.ts  panels.js  title.js  toolbox.js  util.js  util.ts
client/options/: background.js  background.ts  cinema.ts  eden.ts  index.js  index.ts  loop.ts  mascot.ts  meguTV.ts  models.js  nowPlaying.ts  opts.js  r-a-dio.ts  render.js  render.ts  specs.ts  stackBlur.ts  view.js  view.ts
client/page/: board.ts  boardNavigation.ts  common.ts  index.ts  load.ts  navigation.ts  thread.ts  thread_watcher.ts
client/posts/: article.js  collection.ts  collectionView.ts  common.js  countries.ts  embed.js  embed.ts  etc.ts  filter.ts  hide.ts  hover.ts  identity.js  identity.ts  imager.js  images.ts  index.js  index.ts  inlineExpand.ts  inlineExpansion.ts  lightenThread.ts  menu.js  menu.ts  model.ts  models.js  models.ts  nonce.js  posting.js  report.ts  section.js  syncwatch.ts  threadCreation.ts  upload.ts  view.ts
client/scripts/: loader.js  setup.js
client/src/: agent_util.rs  banner.rs  buttons.rs  comp_util.rs  config.rs  connection.rs  fsm.rs  lang.rs  lib.rs  mouse.rs  options.rs  page.rs  page_selector.rs  post.rs  state.rs  subs.rs  thread.rs  thread_index.rs  threads.rs  tool_panel.rs  user_bg.rs  util.rs  widgets.rs
client/sse/: index.ts
client/static/: index.html
client/tests/: app.rs
client/typings/: index.d.ts  tsd.d.ts
client/ui/: banner.ts  captcha.ts  forms.ts  history.ts  index.ts  keyboard.ts  notification.ts  options.ts  tab.ts
client/util/: changes.ts  fetch.ts  fsm.ts  hooks.ts  index.ts  render.ts  scroll.ts  time.ts
client/worker/: clients.js  clients.ts  connection.ts  db.ts  ipc.ts  main.js  main.ts  state.js  state.ts  thread_watcher.ts  tsconfig.json
common/: Cargo.toml  auth.go  auth_ffjson.go  cache_map.go  commands.go  commands_test.go  errors.go  http.go  images.go  images_ffjson.go  imports.js  index.js  moderation.go  oneesama.js  options.js  posts.go  posts_ffjson.go  posts_test.go  util.js  vars.go  websockets.go
common/src/: codec.rs  config.rs  lib.rs  message_types.rs  util.rs
protocol/: Cargo.toml
protocol/src/: codec.rs  lib.rs  message_types.rs  payloads.rs  util.rs
server/: Cargo.toml  Makefile  README  TODO  accounts.go  accounts_test.go  admin.go  admin.js  admin_test.go  amusement.js  api.js  archive.js  assets.go  assets_test.go  builder.c  builder.js  cache.go  caps.js  captcha.go  client.js  common.js  config.go  config.js.example  config_test.go  css.js  curfew.js  daemon.go  db.go  db.js  dbCache.go  dbInit.go  dbInit_test.go  db_test.go  dbserver.db  embed.go  filter.html  findapng.c  fun.js  games.js  go.mod  (+62 more)
server/assets/: common.go
server/auth/: captcha.go  moderation.go
server/cache/: getters_test.go
server/common/: commands.go  commands_test.go  images.go  images_easyjson.go  posts.go  posts_easyjson.go
server/config/: config.go
server/db/: admin.go  antispam_test.go  assets_test.go  auth_test.go  captcha.go  captcha_test.go  config.go  config_test.go  get_posts.sql  image_table.sql  images.go  index.js  init_test.go  links.go  open_posts_test.go  post_table.sql  post_updates.go  posts.go  reader_test.go  test.js  threads.go  threads_test.go  upkeep.go
server/imager/: main_test.go  scheduler.go  thumbnailer_test.go  upload.go  video_test.go
server/lang/: bin_data.go  lang.go
server/legacy/: server.js  web.js
server/lib/: json-template.js  mixpanel.js  mixpanel_invoke.js  oninput.js  socket.io.js  socket.io.min.js
server/log/: init.go
server/mnemonic/: Makefile  binding.gyp  mnemonics.cpp  mnemonizer.cpp
server/parser/: commands.go  credentials.go
server/server/: accounts.go  accounts_test.go  assets.go  cache.go  captcha.go  embed.go  html_test.go  init.go  post_creation.go  router_test.go
server/src/: config.rs  main.rs  message.rs  mt_context.rs  registry.rs  util.rs
server/templates/: article.qtpl.go  board.qtpl  board.qtpl.go  forms.qtpl  forms.qtpl.go  index.html  index.qtpl  index.qtpl.go  index_wasm_go.qtpl.go  input.go  report.qtpl.go  templates.go  thread.qtpl  thread.qtpl.go
server/tripcode/: tripcode.cc  wscript
server/upkeep/: MD5.js
server/web/: admin.js  api.js  html.js  index.js  util.js  websocket.js
server/websockets/: accounts.go  accounts_test.go  admin.go  admin_test.go  clients.go  clients_test.go  feeds.go  feeds_test.go  handlers.go  handlers_test.go  open_post.go  (+14 more)
(+2393 files in other folders)
