[package]
name = "client"
version = "0.1.0"
authors = ["bakape <scorpid33@gmail.com>"]

[dependencies]
libc = "0.2.29"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"

[profile.release]
# TODO: Switch to 'z', once stabilized
opt-level = 2
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
