[package]
authors = ["bakape <bakape@gmail.com>"]
categories = ["wasm"]
description = "client"
edition = "2018"
name = "client"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.40"
backtrace = "0.3.59"
base64 = "0.13.0"
bincode = "1.3.3"
common = {path = "../common"}
console_error_panic_hook = "0.1.6"
flate2 = "1.0.20"
futures = "0.3.15"
gloo = "0.2.1"
hex = "0.4.3"
indexmap = "1.6.2"
js-sys = "0.3.51"
log = {version = "0.4.14", features = ["release_max_level_warn"]}
serde = {version = "1.0.126", features = ["rc"]}
serde_json = "1.0.64"
uuid = "0.8.2"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
wasm-logger = "0.2.0"
# # TODO: switch o v0.19, when it's out
yew = {git = "https://github.com/yewstack/yew.git", ref = "b0de0520042d0f90de4db2e7568d23408811d04e"}
yew-services = {git = "https://github.com/yewstack/yew.git", ref = "b0de0520042d0f90de4db2e7568d23408811d04e"}

[dependencies.web-sys]
features = [
  'Document',
  'Window',
  'HtmlElement',
  'Element',
  'Node',
  "NodeList",
  "console",
  "CloseEvent",
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
  "Location",
  "Navigator",
  "EventTarget",
  "AddEventListenerOptions",
  "Event",
  "Storage",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "CryptoKeyPair",
  "BinaryType",
  "DomRect",
  "FormData",
  "HtmlFormElement",
  "HtmlAnchorElement",
  "HtmlAudioElement",
  "UrlSearchParams",
  "History",
  "ScrollRestoration",
  "DomTokenList",
  "Selection",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "CssStyleDeclaration",
  "DragEvent",
  "Response",
]
version = "0.3.51"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
