[package]
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
name = "common"
version = "0.1.0"

[dependencies]
bincode = "1.3.1"
flate2 = "1.0.16"
hex = "0.4.2"
hex-buffer-serde = "0.2.1"
num = "0.3.0"
num-derive = "0.3.1"
num-traits = "0.2.12"
serde = {version = "1.0.115", features = ["derive", "rc"]}
serde-big-array = "0.3.0"
uuid = {version = "0.8.1", features = ["serde"]}

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
features = [
  "console",
]
version = "0.3.44"
