[package]
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
name = "common"
version = "0.1.0"

[dependencies]
bincode = "1.3.1"
flate2 = "1.0.20"
hex = "0.4.2"
hex-buffer-serde = "0.2.2"
num = "0.3.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = {version = "1.0.123", features = ["derive", "rc"]}
serde-big-array = "0.3.1"
uuid = {version = "0.8.2", features = ["serde"]}
