[package]
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
name = "common"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.22"
hex = "0.4.3"
hex-buffer-serde = "0.3.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
paste = "1.0.6"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde-big-array = "0.3.2"
uuid = { version = "0.8.2", features = ["serde"] }
