[package]
name = "protocol"
version = "0.1.0"
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.106", features = ["derive"]}
bincode = "1.2.0"
num-derive = "0.3.0"
num-traits = "0.2.10"
num = "0.2.0"
flate2 = "1.0.14"
hex-buffer-serde = "0.2.1"
uuid = { version = "0.8.1", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.37"
features = [
  "console",
]
