[package]
name = "protocol"
version = "0.1.0"
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.114", features = ["derive", "rc"] }
bincode = "1.3.1"
num-derive = "0.3.0"
num-traits = "0.2.12"
num = "0.3.0"
flate2 = "1.0.16"
hex-buffer-serde = "0.2.1"
uuid = { version = "0.8.1", features = ["serde"] }
serde-big-array = "0.3.0"
hex = "0.4.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.41"
features = [
  "console",
]
