[package]
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
name = "server"
version = "0.1.0"

[dependencies]
actix = "0.10.0"
actix-rt = "1.1.1"
actix-web = "3.0.2"
actix-web-actors = "3.0.0"
askama_actix = "0.11.1"
async-trait = "0.1.42"
backtrace = "0.3.50"
bytes = "0.5.6"
common = {path = "../common"}
futures = {version = "0.3.5", features = ["std", "alloc"]}
htmlescape = "0.3.1"
include_dir = "0.6.0"
lazy_static = "1.4.0"
libc = "0.2.74"
log = "0.4.11"
memmap = "0.7.0"
openssl = {version = "0.10.30", features = ["vendored"]}
rand = "0.7.3"
rayon = "1.4.0"
regex = "1.3.9"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
stderrlog = "0.5.0"
syntect = "4.4.0"
tripcode = "0.2.1"
url = "2.1.1"
uuid = "0.8.1"
dotenv = "0.15.0"
actix-files = "0.5.0"

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "3.0.0-beta.2"

[dependencies.sqlx]
features = [
  "postgres",
  "macros",
  "json",
  "uuid",
  "tls",
  "runtime-actix-rustls",
  "migrate",
  "offline",
]
git = "https://github.com/launchbadge/sqlx.git"

[dependencies.askama]
features = ["with-actix-web", "serde-json"]
version = "0.10.5"

[dependencies.futures-channel]
default-features = false
version = "0.3.1"

[dependencies.tokio]
features = ["rt-multi-thread", "time", "test-util", "sync"]
version = "0.3.6"
