[package]
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
name = "meguca"
version = "0.1.0"

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-rt = "2.0.2"
actix-service = "1.0.6"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
askama_actix = "0.11.1"
async-trait = "0.1.42"
backtrace = "0.3.56"
cfg-if = "1.0.0"
cfg-match = "0.2.1"
common = {path = "../common"}
dotenv = "0.15.0"
futures = {version = "0.3.12", features = ["std", "alloc"]}
htmlescape = "0.3.1"
include_dir = "0.6.0"
lazy_static = "1.4.0"
libc = "0.2.86"
log = "0.4.14"
memmap = "0.7.0"
openssl = {version = "0.10.32", features = ["vendored"]}
rand = "0.8.3"
rayon = "1.5.0"
regex = "1.4.3"
serde = {version = "1.0.123", features = ["derive"]}
serde_json = "1.0.62"
stderrlog = "0.5.1"
syntect = "4.5.0"
tripcode = "0.2.1"
url = "2.2.0"
uuid = "0.8.2"

[dependencies.clap]
features = ["suggestions", "color", "wrap_help"]
version = "3.0.0-beta.2"

[dependencies.sqlx]
features = [
  "postgres",
  "macros",
  "json",
  "uuid",
  "tls",
  "runtime-actix-rustls",
  "migrate",
  "offline",
]
version = "0.5.1"

[dependencies.askama]
features = ["with-actix-web", "serde-json"]
version = "0.10.5"

[dependencies.futures-channel]
default-features = false
version = "0.3.12"

[dependencies.tokio]
features = ["rt-multi-thread", "time", "test-util", "sync"]
version = "1.2.0"
