[package]
name = "websockets"
version = "0.1.0"
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.72"
rayon = "1.3.1"
protocol = { path = "../../protocol" }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
heapless = "0.5.5"
backtrace = "0.3.50"
uuid = "0.8.1"
openssl = { version = "0.10.30", features = ["vendored"] }
syntect = "4.2.0"
htmlescape = "0.3.1"
url = "2.1.1"
regex = "1.3.9"
lazy_static = "1.4.0"
tripcode = "0.2.1"
tokio-postgres = "0.5.5"
deadpool-postgres = "0.5.5"
deadpool = "0.5.1"
futures = { version = "0.3.5", features = ["std", "alloc"] }

[dependencies.tokio]
version = "0.2.21"
features = ["rt-threaded", "blocking", "time", "macros"]
