[package]
authors = ["bakape <bakape@gmail.com>"]
edition = "2018"
name = "websockets"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
backtrace = "0.3.50"
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
futures = {version = "0.3.5", features = ["std", "alloc"]}
heapless = "0.5.5"
htmlescape = "0.3.1"
lazy_static = "1.4.0"
libc = "0.2.74"
openssl = {version = "0.10.30", features = ["vendored"]}
protocol = {path = "../../protocol"}
rayon = "1.3.1"
regex = "1.3.9"
serde = {version = "1.0.115", features = ["derive"]}
serde_json = "1.0.57"
syntect = "4.3.0"
tokio-postgres = {version = "0.5.5", features = ["with-serde_json-1"]}
tripcode = "0.2.1"
url = "2.1.1"
uuid = "0.8.1"

[dependencies.tokio]
features = ["rt-threaded", "blocking", "time", "macros"]
version = "0.2.22"
